# darkhunt-telemetry-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  sonar-project.properties
.claude-plugin/: marketplace.json
.claude/hooks/: gate.sh
.claude/skills/darkhunt-telemetry-integration/: SKILL.md
.claude/skills/darkhunt-telemetry-python-integration/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
darkhunt_telemetry/: __init__.py  _version.py  attributes.py  client.py  exporter.py  otel_globals.py  span.py  trace.py  types.py
darkhunt_telemetry/masking/: __init__.py  sanitizer.py
darkhunt_telemetry/masking/rules/: rules.json
darkhunt_telemetry/masking/validators/: __init__.py  aba.py  base58check.py  bech32.py  credit_card.py  eip55.py  iban_mod97.py  keccak.py  luhn.py
darkhunt_telemetry/temporal/: __init__.py  handoff_header.py  interceptors.py
darkhunt_telemetry/transports/: __init__.py  http.py  queue.py
plugins/darkhunt-telemetry-py/.claude-plugin/: plugin.json
plugins/darkhunt-telemetry-py/skills/darkhunt-telemetry-python-integration/: SKILL.md
tests/: conftest.py  test_exporter.py  test_exporter_resilience.py  test_handoff.py  test_keccak.py  test_lifecycle.py  test_masking.py  test_masking_coverage.py  test_masking_parity.py  test_otel_globals.py  test_temporal.py  test_temporal_converter.py  test_tracing.py  test_transports.py  test_update_paths.py
