[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "darkhunt-telemetry"
# Single source of truth: the version is read from darkhunt_telemetry/_version.py
# by hatchling (see [tool.hatch.version] below). Bump that ONE file to release.
dynamic = ["version"]
description = "Python SDK for sending LLM traces, generations, and observations to the Darkhunt platform for persistence and security data enrichment. Built on OpenTelemetry primitives, with built-in client-side data masking."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "Darkhunt Limited" }]
keywords = [
    "opentelemetry",
    "otel",
    "otlp",
    "llm",
    "observability",
    "tracing",
    "data-masking",
    "pii",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-common>=1.20.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
# Optional Temporal handoff propagation (interceptors). Install with
#   pip install "darkhunt-telemetry[temporal]"
temporal = ["temporalio>=1.4.0"]
# Vetted-crypto path for the Keccak validator (lazy-imported).
#   pip install "darkhunt-telemetry[crypto]"
crypto = ["pycryptodome>=3.19"]
# Development / test tooling.
dev = [
    "pytest>=7.0",
    "pyyaml>=6.0",
    "ruff>=0.6",
    "mypy>=1.8",
    "types-requests>=2.25",
    "bandit>=1.7",
]

[project.urls]
Homepage = "https://github.com/darkhunt-security/darkhunt-telemetry-python#readme"
Repository = "https://github.com/darkhunt-security/darkhunt-telemetry-python"
Issues = "https://github.com/darkhunt-security/darkhunt-telemetry-python/issues"

[tool.hatch.version]
# Reads `__version__` from this file at build time (default regex source).
path = "darkhunt_telemetry/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["darkhunt_telemetry"]

[tool.hatch.build.targets.wheel.force-include]
"darkhunt_telemetry/masking/rules/rules.json" = "darkhunt_telemetry/masking/rules/rules.json"
"darkhunt_telemetry/py.typed" = "darkhunt_telemetry/py.typed"

[tool.pytest.ini_options]
testpaths = ["tests"]
# CI/gate envs sync with --no-build --no-install-project (supply-chain hardening:
# no setup scripts run at install time), so the package is imported straight from
# the repo root instead of an installed distribution.
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sorting, B bugbear. (pyupgrade/UP is
# intentionally omitted: with a 3.9 floor + `from __future__ import annotations`
# it would only churn typing style.)
select = ["E", "W", "F", "I", "B"]

[tool.ruff.lint.per-file-ignores]
# Tests may shadow builtins / use assert-heavy patterns and local imports.
"tests/**" = ["B011"]

[tool.mypy]
# Analyze at 3.10 (the floor the current mypy supports); runtime 3.9 support is
# guaranteed by the pytest matrix in CI, and all annotations are stringized via
# `from __future__ import annotations`.
python_version = "3.10"
files = ["darkhunt_telemetry"]
# Third-party OTel/requests/temporalio ship partial or no stubs; don't fail on
# their internals. Our own package stays checked.
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
warn_redundant_casts = true
# Temporal interceptors subclass dynamically-typed temporalio base classes.
[[tool.mypy.overrides]]
module = "darkhunt_telemetry.temporal.*"
disallow_untyped_defs = false

[tool.bandit]
# Scan the package only; tests use asserts/fixtures that trip low-value checks.
exclude_dirs = ["tests"]
